--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					<p><span class="tm-info-label">Email</span> mgqshi@163.com</p>
 					<p><span class="tm-info-label">学历</span> 本科</p>
 					<p><span class="tm-info-label">所在学校</span> 湖南科技学院(11.9-15.7)</p>
-					<p><span class="tm-info-label">个人主页</span> <a href="#" class="tm-red-text">mgqshi.github.io</a></p>
+					<p><span class="tm-info-label">个人主页</span> <a href="#" class="tm-red-text">https://mgqshi.github.io/mgqResume/</a></p>
 					<h4 class="tm-progress-label">HTML/CSS/JS <small class="progress-percent-small">100%</small></h4>
 					<div class="progress tm-progress">
 						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
